@@ -36,7 +36,7 @@ import static org.elasticsearch.server.cli.ProcessUtil.nonInterruptible;
 /**
  * A helper to control a {@link Process} running the main Elasticsearch server.
  *
- * <p> The process can be started by calling {@link #start(Terminal, ProcessInfo, ServerArgs, Path)}.
+ * <p> The process can be started by calling {@link #start(Terminal, ProcessInfo, ServerArgs)}.
  * The process is controlled by internally sending arguments and control signals on stdin,
  * and receiving control signals on stderr. The start method does not return until the
  * server is ready to process requests and has exited the bootstrap thread.
@@ -66,7 +66,7 @@ public class ServerProcess {
 
     // this allows mocking the process building by tests
     interface OptionsBuilder {
-        List<String> getJvmOptions(Path configDir, Path pluginsDir, Path tmpDir, String envOptions) throws InterruptedException,
+        List<String> getJvmOptions(ServerArgs args, Path configDir, Path tmpDir, String envOptions) throws InterruptedException,
             IOException, UserException;
     }
 
@@ -78,15 +78,14 @@ public class ServerProcess {
     /**
      * Start a server in a new process.
      *
-     * @param terminal A terminal to connect the standard inputs and outputs to for the new process.
-     * @param processInfo Info about the current process, for passing through to the subprocess.
-     * @param args Arguments to the server process.
-     * @param pluginsDir The directory in which plugins can be found
+     * @param terminal        A terminal to connect the standard inputs and outputs to for the new process.
+     * @param processInfo     Info about the current process, for passing through to the subprocess.
+     * @param args            Arguments to the server process.
      * @return A running server process that is ready for requests
      * @throws UserException If the process failed during bootstrap
      */
-    public static ServerProcess start(Terminal terminal, ProcessInfo processInfo, ServerArgs args, Path pluginsDir) throws UserException {
-        return start(terminal, processInfo, args, pluginsDir, JvmOptionsParser::determineJvmOptions, ProcessBuilder::start);
+    public static ServerProcess start(Terminal terminal, ProcessInfo processInfo, ServerArgs args) throws UserException {
+        return start(terminal, processInfo, args, JvmOptionsParser::determineJvmOptions, ProcessBuilder::start);
     }
 
     // package private so tests can mock options building and process starting
@@ -94,7 +93,6 @@ public class ServerProcess {
         Terminal terminal,
         ProcessInfo processInfo,
         ServerArgs args,
-        Path pluginsDir,
         OptionsBuilder optionsBuilder,
         ProcessStarter processStarter
     ) throws UserException {
@@ -103,7 +101,7 @@ public class ServerProcess {
 
         boolean success = false;
         try {
-            jvmProcess = createProcess(processInfo, args.configDir(), pluginsDir, optionsBuilder, processStarter);
+            jvmProcess = createProcess(args, processInfo, args.configDir(), optionsBuilder, processStarter);
             errorPump = new ErrorPumpThread(terminal.getErrorWriter(), jvmProcess.getErrorStream());
             errorPump.start();
             sendArgs(args, jvmProcess.getOutputStream());
@@ -138,7 +136,7 @@ public class ServerProcess {
     /**
      * Detaches the server process from the current process, enabling the current process to exit.
      *
-     * @throws IOException If an I/O error occured while reading stderr or closing any of the standard streams
+     * @throws IOException If an I/O error occurred while reading stderr or closing any of the standard streams
      */
     public synchronized void detach() throws IOException {
         errorPump.drain();
@@ -178,11 +176,10 @@ public class ServerProcess {
             args.writeTo(out);
             out.flush();
         } catch (IOException ignore) {
-            // A failure to write here means the process has problems, and it will die anyways. We let this fall through
+            // A failure to write here means the process has problems, and it will die anyway. We let this fall through
             // so the pump thread can complete, writing out the actual error. All we get here is the failure to write to
             // the process pipe, which isn't helpful to print.
         }
-        args.keystorePassword().close();
     }
 
     private void sendShutdownMarker() {
@@ -196,9 +193,9 @@ public class ServerProcess {
     }
 
     private static Process createProcess(
+        ServerArgs args,
         ProcessInfo processInfo,
         Path configDir,
-        Path pluginsDir,
         OptionsBuilder optionsBuilder,
         ProcessStarter processStarter
     ) throws InterruptedException, IOException, UserException {
@@ -208,7 +205,7 @@ public class ServerProcess {
             envVars.put("LIBFFI_TMPDIR", tempDir.toString());
         }
 
-        List<String> jvmOptions = optionsBuilder.getJvmOptions(configDir, pluginsDir, tempDir, envVars.remove("ES_JAVA_OPTS"));
+        List<String> jvmOptions = optionsBuilder.getJvmOptions(args, configDir, tempDir, envVars.remove("ES_JAVA_OPTS"));
         // also pass through distribution type
         jvmOptions.add("-Des.distribution.type=" + processInfo.sysprops().get("es.distribution.type"));
 
@@ -220,6 +217,9 @@ public class ServerProcess {
         command.addAll(jvmOptions);
         command.add("--module-path");
         command.add(esHome.resolve("lib").toString());
+        // Special circumstances require some modules (not depended on by the main server module) to be explicitly added:
+        command.add("--add-modules=jdk.net"); // needed to reflectively set extended socket options
+        command.add("--add-modules=org.elasticsearch.preallocate"); // needed on boot layer as target to open java.io
         command.add("-m");
         command.add("org.elasticsearch.server/org.elasticsearch.bootstrap.Elasticsearch");
 
@@ -233,7 +233,7 @@ public class ServerProcess {
     /**
      * Returns the java.io.tmpdir Elasticsearch should use, creating it if necessary.
      *
-     * <p> On non-Windows OS, this will be created as a sub-directory of the default temporary directory.
+     * <p> On non-Windows OS, this will be created as a subdirectory of the default temporary directory.
      * Note that this causes the created temporary directory to be a private temporary directory.
      */
     private static Path setupTempDir(ProcessInfo processInfo, String tmpDirOverride) throws UserException, IOException {
